xrpl-common-stdlib/tests/locator/fail_ledger_get_from_current_tx_only.stderr
error[E0277]: `TxOnly` cannot be read from a ledger object
  --> tests/locator/fail_ledger_get_from_current_tx_only.rs:34:51
   |
34 |     let _ = Obj.path().field(sfield::Flags).get::<TxOnly>();
   |                                             ---   ^^^^^^ the trait `FromLedger` is not implemented for `TxOnly`
   |                                             |
   |                                             required by a bound introduced by this call
   |
   = note: array/object fields can't be decoded directly. Navigate into them with a locator (`.field(sfield::X)...`) or use a typed accessor
   = help: the following other types implement trait `FromLedger`:
             AccountID
             Amount
             Blob<N>
             Currency
             Issue
             UInt<xrpl_common_stdlib::::types::uint::UInt128::{constant#0}>
             UInt<xrpl_common_stdlib::::types::uint::UInt160::{constant#0}>
             UInt<xrpl_common_stdlib::::types::uint::UInt192::{constant#0}>
           and $N others
note: required by a bound in `LedgerPathBuilder::get`
  --> src/fields/locator.rs
   |
   |     pub fn get<T: FromLedger>(&self) -> Result<T> {
   |                   ^^^^^^^^^^ required by this bound in `LedgerPathBuilder::get`
